--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".MainActivity">
+    tools:context=".login">
 
     <TextView
         android:layout_width="match_parent"
@@ -62,7 +63,7 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/login"
+        android:id="@+id/logbtn"
         android:layout_below="@id/sign"
         android:text="@string/login"
         android:layout_centerHorizontal="true"
@@ -74,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/forgotpassword"
-        android:layout_below="@id/login"
+        android:layout_below="@id/logbtn"
         android:text="@string/forgot_password"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
