--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".MainActivity">
+    tools:context=".signup">
 
     <TextView
         android:layout_width="match_parent"
@@ -52,8 +53,24 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pass"
+        android:id="@+id/pno"
         android:layout_below="@id/mail"
+        android:background="#30ffffff"
+        android:hint="@string/phone_number"
+        android:inputType="phone"
+        android:autofillHints="phone"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:drawableStart="@drawable/ic_baseline_phone_24"
+        android:drawablePadding="20dp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pass"
+        android:layout_below="@id/pno"
         android:background="#30ffffff"
         android:hint="@string/password"
         android:inputType="textPassword"
@@ -81,13 +98,14 @@
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawablePadding="20dp"/>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/submit"
         android:layout_below="@id/cnfpass"
         android:text="@string/submit"
         android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/purple_200"
         android:layout_margin="20dp"/>
 
 </RelativeLayout>
