--- a/app/src/main/res/layout/manual_house.xml
+++ b/app/src/main/res/layout/manual_house.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/addtran"
+        android:id="@+id/addtranhouse"
         android:text="ADD TRANSACTION"
         android:textColor="@color/white"
         android:textSize="35sp"
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/h_title"
-        android:layout_below="@id/addtran"
+        android:layout_below="@id/addtranhouse"
         android:background="#30ffffff"
         android:hint="Title"
         android:inputType="text"
@@ -49,12 +49,39 @@
         android:drawablePadding="20dp"/>
 
     <EditText
+        android:id="@+id/h_when"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/h_when"
         android:layout_below="@id/h_amount"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:autofillHints="Transaction_performed"
         android:background="#30ffffff"
-        android:hint="Transaction Performerd"
+        android:drawablePadding="20dp"
+        android:hint="Date"
+        android:padding="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sub_date"
+        android:layout_below="@id/h_when"
+        android:text="Pick Date"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/purple_200"
+        android:layout_margin="5dp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/h_time"
+        android:layout_below="@id/sub_date"
+        android:background="#30ffffff"
+        android:hint="Time "
         android:autofillHints="Transaction_performed"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
@@ -64,10 +91,20 @@
 
 
     <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sub_time"
+        android:layout_below="@id/h_time"
+        android:text="Pick Time"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/purple_200"
+        android:layout_margin="5dp"/>
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/submit"
-        android:layout_below="@id/h_when"
+        android:layout_below="@id/sub_time"
         android:text="@string/submit"
         android:layout_centerHorizontal="true"
         android:backgroundTint="@color/purple_200"
