pages linked to navigation menu

--- a/app/src/main/res/layout/category_page.xml
+++ b/app/src/main/res/layout/category_page.xml
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:text="CATEGORIES"
+                android:text="@string/categories"
+                android:textAllCaps="true"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
