--- a/app/src/main/res/layout/category_page.xml
+++ b/app/src/main/res/layout/category_page.xml
@@ -54,6 +54,7 @@
             >
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/house"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
@@ -87,6 +88,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/clothing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
@@ -122,6 +124,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/electronics"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="1"
@@ -157,6 +160,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/health"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="2"
@@ -192,6 +196,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/travel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="3"
@@ -227,6 +232,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/enjoyment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="1"
@@ -295,6 +301,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/food"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="2"
@@ -328,6 +335,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/others"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="3"
